upgraded/refactored POMs